--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1576,24 +1576,26 @@ pre code {
   overflow-y: scroll;
 }
 .container {
+  padding-top: 10px;
   padding-right: 15px;
   padding-left: 15px;
+  margin-top: auto;
   margin-right: auto;
   margin-left: auto;
 }
 @media (min-width: 768px) {
   .container {
-    width: 750px;
+    width: 90%;
   }
 }
 @media (min-width: 992px) {
   .container {
-    width: 970px;
+    width: 90%;
   }
 }
 @media (min-width: 1200px) {
   .container {
-    width: 1170px;
+    width: 90%;
   }
 }
 .container-fluid {
