--- a/views/user_student.ejs
+++ b/views/user_student.ejs
@@ -56,7 +56,7 @@
 </nav>
 
 <!-- Portfolio Section -->
-<div id="portfolio" style="margin-bottom: 90px;">
+<div id="portfolio">
   <div class="section-title text-center center">
     <div class="overlay">
       <div class="container">
@@ -83,7 +83,7 @@
         รายการยืมคืนอุปกรณ์ครุภัณฑ์ในปัจจุบัน
       </h3>
       <hr style="width: 420px;">
-
+      <div class="col-xs-12 col-md-12 col-lg-12">
       <div style="margin-left: 20px; margin-bottom: 60px; display: block; line-height: 30px;">
         <% if (borrowss.length > 0) { %>
           <% let b1 = '' %>
@@ -131,10 +131,6 @@
                   <% } %>
                 </td>
                 <td style="width: 15%;">
-                  วันที่ทำรายการ <br>
-                  <%= value.bor_book_date %> <%= value.bor_book_time %>
-                </td>
-                <td style="width: 15%;">
                   วันที่ยืม <br>
                   <%= value.bor_date %> <%= value.bor_time %>
                 </td>
@@ -155,9 +151,10 @@
           </a>
         <% } %>
       </div>
+      </div>
     </div>
     
-    <div style="background-color: lightgray; padding: 10px; border-radius: 10px;">
+    <div style="background-color: lightgray; padding: 10px; border-radius: 10px; margin-bottom: 90px;">
       <i class="fa fa-star"></i>
       <b><u> ติดต่อสอบถาม </u></b>
       <i class="fa fa-star"></i>
