--- a/css/profileStyle.css
+++ b/css/profileStyle.css
@@ -7,7 +7,7 @@
     -webkit-background-size: cover;
 	-moz-background-size: cover;
     -o-background-size: cover;
-    padding-bottom: 60px;
+    padding-bottom: 15%;
     width: 100%;
 }
 #portfolio {
